--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+.h1 {
+  color: #c59d5f;
+  font-family: 'MonAmourTwoMedium';
+  text-align: center;
+  font-size: 68px;
+  margin-bottom: 0;
+  line-height: 1;
+}
 .header {
   height: 100%;
   background: url(../images/header.jpg) no-repeat 50%;
@@ -13,6 +21,14 @@
 .header .row {
   height: 100%;
 }
+.header .mini-name {
+  font-family: 'OfficinaSerifCTT';
+  font-size: 24px;
+  text-transform: uppercase;
+  color: #c8c8c8;
+  margin-top: 40px;
+  letter-spacing: 2px;
+}
 .header-title {
   width: 100%;
   height: 100%;
@@ -27,7 +43,7 @@
   display: table-cell;
 }
 .nav {
-  font-family: 'OfficinaSerifCTTRegular';
+  font-family: 'OfficinaSerifCTT';
   font-size: 20px;
 }
 .nav .social {
@@ -80,7 +96,7 @@
   font-size: 18px;
 }
 .about-rest .text {
-  font-family: 'OfficinaSerifCTTRegular';
+  font-family: 'OfficinaSerifCTT';
   color: black;
   font-size: 16px;
   line-height: 1.4;
@@ -196,4 +212,429 @@
 .about-menu img {
   width: 100%;
   height: auto;
+}
+.about-menu .history-link {
+  font-family: 'Roboto', sans-serif;
+  color: #c59d5f;
+  font-size: 16px;
+  display: inline-block;
+  text-transform: uppercase;
+  margin-top: 30px;
+  text-decoration: none !important;
+  border-bottom: 1px solid #e3d1b8;
+  line-height: 1;
+}
+.menu-hidden {
+  position: relative;
+  overflow: hidden;
+}
+.menu-hidden:hover .visible-menu {
+  opacity: 1;
+  transition-delay: 0s;
+}
+.menu-hidden:hover .visible-menu .text-event {
+  opacity: 1;
+  transform: scale(1);
+  transition-delay: 0.1s;
+}
+.visible-menu {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.61);
+  -webkit-transition: all 0.3s ease-in 0.4s;
+  -moz-transition: all 0.3s ease-in 0.4s;
+  transition: all 0.3s ease-in 0.4s;
+}
+.visible-menu .text-table {
+  width: 100%;
+  height: 100%;
+  display: table;
+  text-align: center;
+  position: relative;
+}
+.visible-menu .text-cell {
+  display: table-cell;
+  vertical-align: middle;
+}
+.visible-menu .text-event {
+  font-family: 'MonAmourTwoMedium';
+  color: white;
+  font-size: 38px;
+  line-height: 1;
+  transform: scale(10);
+  opacity: 0;
+  -webkit-transition: all 0.3s ease-in-out 0.1s;
+  -moz-transition: all 0.3s ease-in-out 0.1s;
+  transition: all 0.3s ease-in-out 0.1s;
+}
+.about-text .history {
+  text-align: center;
+}
+.about-text .text {
+  font-family: 'OfficinaSerifCTT';
+  color: black;
+  font-size: 16px;
+}
+.video-wrapper {
+  background: url(../images/video.jpg) no-repeat 50%;
+  background-size: cover;
+  height: 500px;
+  padding-top: 20px;
+}
+.video-wrapper p {
+  margin: 0;
+  text-transform: uppercase;
+  text-align: center;
+  color: white;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 600;
+  font-size: 34px;
+}
+.video-wrapper .play {
+  cursor: pointer;
+  display: block;
+  width: 115px;
+  margin: auto;
+  margin-top: 100px;
+}
+.subscribe {
+  background: #d5b177;
+  text-align: center;
+  padding: 30px 0;
+}
+.subscribe .title {
+  text-transform: uppercase;
+  font-family: 'OfficinaSerifCTT';
+  font-size: 26px;
+  color: #010101;
+  margin: 30px 0;
+}
+.subscribe .logo {
+  margin-bottom: 40px;
+}
+.social-sub li {
+  display: inline-block;
+}
+.social-sub li:first-child {
+  margin-right: 15px;
+}
+.subscribe-form {
+  margin-bottom: 50px;
+}
+.subscribe-form fieldset {
+  width: 615px;
+  position: relative;
+  margin: auto;
+}
+.subscribe-form input[type="text"] {
+  width: 100%;
+  height: 65px;
+  outline: 0;
+  padding-left: 15px;
+  font-family: 'OfficinaSerifCTTItalic';
+  font-size: 30px;
+  background-color: transparent;
+  border: 3px solid white;
+}
+.subscribe-form .post-sub {
+  display: block;
+  position: absolute;
+  cursor: pointer;
+  right: 25px;
+  top: 15px;
+  width: 42px;
+  height: 32px;
+  background: url(../images/post.png) no-repeat;
+  outline: 0;
+  border: 0;
+}
+.footer {
+  background: #343030;
+  padding: 50px 0;
+}
+.foot-list {
+  text-align: center;
+  font-family: 'OfficinaSerifCTT';
+  font-size: 26px;
+  margin: 0;
+}
+.foot-list li {
+  display: inline-block;
+  color: #7a7676;
+}
+.foot-list a {
+  color: #7a7676;
+  text-decoration: none !important;
+}
+.foot-list a:hover {
+  color: #c59d5f;
+}
+.foot-list .dot {
+  padding: 0 15px;
+}
+.header-banquets {
+  background: url(../images/banquets.jpg) no-repeat;
+  background-size: cover;
+}
+.header-banquets .title {
+  margin-top: 0;
+  line-height: 1;
+  font-size: 70px;
+}
+.banc-block {
+  color: black;
+  font-size: 18px;
+  font-family: 'OfficinaSerifCTT';
+  margin-bottom: 100px;
+}
+.banc-block img {
+  width: 100%;
+  height: auto;
+}
+.banc-block .title {
+  font-family: 'OfficinaSerifCTTBold';
+  font-size: 20px;
+  line-height: 1;
+  margin-top: 35px;
+  margin-bottom: 20px;
+}
+.banc-block p {
+  line-height: 1.2;
+  margin-bottom: 20px;
+}
+.banc-text {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+.reserv-block {
+  display: inline-block;
+  font-family: 'GothamProRegular';
+  margin-right: 50px;
+}
+.reserv-block:last-child {
+  margin-right: 0;
+}
+.reserv-block .input {
+  outline: 0;
+  border: 1px solid #acacac;
+  width: 245px;
+  height: 50px;
+  padding-left: 10px;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  font-family: 'GothamProRegular';
+  color: #555555;
+  font-size: 22px;
+  display: block;
+  float: left;
+}
+/*	=	Select */
+
+.select,
+.reser-icon {
+  display: block;
+  float: left;
+}
+.reser-icon {
+  margin-right: 25px;
+  position: relative;
+  top: 9px;
+}
+.slct {
+  display: block;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  border: 1px solid #acacac;
+  background-color: transparent;
+  background-image: url(../images/drop.png);
+  background-repeat: no-repeat;
+  background-position: 95%;
+  width: 240px;
+  height: 50px;
+  line-height: 50px;
+  padding-left: 10px;
+  font-family: 'GothamProRegular';
+  color: #555555 !important;
+  font-size: 22px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+  text-decoration: none !important;
+  text-align: left !important;
+}
+.slct.active {
+  -webkit-border-radius: 7px 7px 0 0;
+  -moz-border-radius: 7px 7px 0 0;
+  border-radius: 7px 7px 0 0;
+}
+.drop {
+  margin: 0;
+  padding: 0;
+  width: 240px;
+  border: 1px solid #acacac;
+  border-top: none;
+  display: none;
+  position: absolute;
+  background: white;
+  text-align: left !important;
+}
+.drop li {
+  list-style: none;
+  border-top: 1px dotted #e8e8e8;
+  cursor: pointer;
+  display: block;
+  color: #444444;
+  padding: 4px 15px 4px 10px;
+}
+.drop li:hover {
+  background-color: #e8e8e8;
+  color: #222222;
+}
+.reserv header {
+  text-transform: uppercase;
+  text-align: center;
+  font-family: 'OfficinaSerifCTT';
+  font-size: 36px;
+  color: black;
+  margin-bottom: 50px;
+}
+.reserv-container {
+  text-align: center;
+  padding-bottom: 65px;
+}
+.reserv-container .send {
+  display: block;
+  margin: auto;
+  outline: 0;
+  border: 0;
+  -webkit-border-radius: 7px;
+  -moz-border-radius: 7px;
+  border-radius: 7px;
+  background: #262526;
+  font-family: 'GothamProRegular';
+  color: #fffefe;
+  text-transform: uppercase;
+  font-size: 20px;
+  width: 300px;
+  height: 50px;
+  margin-top: 65px;
+}
+.other-sub {
+  background: black;
+}
+.other-sub .sub-block {
+  padding-left: 100px;
+  padding-right: 100px;
+}
+.other-sub .text {
+  font-family: 'OfficinaSerifCTT';
+  font-size: 20px;
+  color: white;
+  line-height: 2;
+  margin-top: 20px;
+}
+.other-sub .title {
+  color: white;
+}
+.other-sub .subscribe-form input[type="text"] {
+  background-color: white;
+  border-color: transparent;
+  color: black;
+  padding-bottom: 4px;
+}
+.other-sub .subscribe-form .post-sub {
+  background: url(../images/dark-post.png) no-repeat;
+}
+.app-img {
+  width: 100%;
+  height: auto;
+}
+.group-block {
+  margin: 25px 0;
+}
+.app {
+  margin-top: 35px;
+}
+.header-menu {
+  background: url(../images/menu.jpg) no-repeat 50%;
+  background-size: cover;
+  height: 450px;
+}
+.header-menu .title {
+  font-size: 72px;
+  color: white;
+}
+.menu-wrapper .h2 {
+  text-align: left;
+  margin-bottom: 20px;
+}
+.menu-block {
+  position: relative;
+  padding-right: 40px;
+  margin: 3px 0;
+  margin-bottom: 25px;
+}
+.menu-block .row {
+  border-bottom: 2px dotted #2b2b2b;
+  margin-left: 0;
+  margin-right: 0;
+}
+.menu-block .name {
+  background: white;
+  display: inline-block;
+  position: relative;
+  bottom: -0.2em;
+  top: 7px;
+  padding-right: 3px;
+  padding-left: 10px;
+  color: black;
+  font-size: 20px;
+  font-family: 'OfficinaSerifCTT';
+  line-height: 1;
+}
+.menu-block .price {
+  padding: 0 5px;
+  padding-right: 10px;
+  position: absolute;
+  font-family: 'OfficinaSerifCTTBold';
+  right: 0;
+  display: inline-block;
+  background: white;
+  top: 10px;
+  padding-left: 3px;
+  color: black;
+  font-size: 20px;
+  line-height: 1;
+}
+.menu-new {
+  border: 2px solid #c59d5f;
+  padding-bottom: 10px;
+  margin-top: 15px;
+}
+.menu-new:before {
+  content: "Новинка";
+  display: block;
+  position: absolute;
+  top: -30px;
+  left: -2px;
+  z-index: 2;
+  font-family: 'MonAmourTwoMedium';
+  font-size: 20px;
+  color: white;
+  background: #c59d5f;
+  padding: 0 5px;
+}
+.menu-img {
+  margin-top: 10px;
+  height: 370px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50%;
 }
