--- a/css/main.css
+++ b/css/main.css
@@ -8,7 +8,7 @@
 }
 .header {
   height: 100%;
-  background: url(../images/header.jpg) no-repeat 50%;
+  background: url(../images/header.jpg) center 0 no-repeat fixed;
   background-size: cover;
   text-align: center;
 }
@@ -377,7 +377,7 @@
   padding: 0 15px;
 }
 .header-banquets {
-  background: url(../images/banquets.jpg) no-repeat;
+  background: url(../images/banquets.jpg) center 0 no-repeat fixed;
   background-size: cover;
 }
 .header-banquets .title {
@@ -563,7 +563,7 @@
   margin-top: 35px;
 }
 .header-menu {
-  background: url(../images/menu.jpg) no-repeat 50%;
+  background: url(../images/menu.jpg) center 0 no-repeat fixed;
   background-size: cover;
   height: 450px;
 }
@@ -637,4 +637,95 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50%;
+}
+.none-float .col-sm-6 {
+  clear: both;
+}
+.menu-wrapper {
+  padding-bottom: 20px;
+}
+.header-rest {
+  background: url(../images/restoraunt.jpg) center 0 no-repeat fixed;
+  background-size: cover;
+}
+.rest-text {
+  margin-top: 25px;
+  text-align: center;
+}
+.menu-rest {
+  padding-bottom: 80px;
+}
+.about-zal {
+  padding-top: 0;
+  padding-bottom: 30px;
+}
+.about-zal .h2 {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+.about-zal .text {
+  text-align: center;
+}
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+.gallery .col-md-3 {
+  padding-right: 10px;
+  padding-bottom: 10px;
+  padding-left: 0;
+}
+.gallery-wrapper {
+  margin-top: 20px;
+}
+.maps-img {
+  width: 100%;
+  height: auto;
+}
+.maps {
+  margin-top: 150px;
+}
+.maps .small-title {
+  font-size: 24px;
+  margin-bottom: 35px;
+}
+.reserv-table {
+  margin-top: 40px;
+}
+.header-event {
+  background: url(../images/event.jpg) center 0 no-repeat fixed;
+  background-size: cover;
+}
+.event-title {
+  font-family: 'MonAmourTwoMedium';
+  color: white;
+  font-size: 60px;
+}
+.event-item .date {
+  font-family: 'Roboto', sans-serif;
+  color: #c59d5f;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+.event-item img {
+  width: 100%;
+  height: auto;
+}
+.event-item .text {
+  font-family: 'OfficinaSerifCTT';
+  font-size: 18px;
+  color: black;
+  line-height: 1.2;
+}
+.gallery-event {
+  margin-top: 80px;
+  padding-bottom: 100px;
+}
+.event-table {
+  display: table;
+  height: 370px;
+}
+.event-cell {
+  display: table-cell;
+  vertical-align: middle;
 }
